Fix ActionBar collapse parity via ActionGroup overflow behavior

--- a/packages/@vue-spectrum/actionbar/src/actionbar.css
+++ b/packages/@vue-spectrum/actionbar/src/actionbar.css
@@ -1,6 +1,7 @@
 .ActionBarContainer {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   position: relative;
 
   & > :not(.react-spectrum-ActionBar) {
